Fix broken link

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -36,6 +36,7 @@ Panoramica has 2 ways to ingest data: via built-in connectors or the API.
 
 Panoramica includes a connector to [Orbit](https://orbit.love/) that
 uses the [Orbit API](https://api.orbit.love/) to ingest data from sources like Discord, GitHub, Discourse, Twitter, and more.
+Learn more in the [Import Data via Orbit](/docs/developer-guides/import-data-via-orbit) guide.
 
 :::info
 
@@ -45,7 +46,7 @@ Panoramica is created and maintained by the Orbit team. Hello! We intend to supp
 
 ### Via the API
 
-Panoramica also has an API endpoint for receiving activities from any source. Check out the [Import Data via API](/docs/developer-guides/import-data) guide to learn more.
+Panoramica also has an API endpoint for receiving activities from any source. Check out the [Import Data via API](/docs/developer-guides/import-data-via-api) guide to learn more.
 
 ## Transforming Data
 
