Improve the user guides

--- a/blog/2023-07-26-introducing-panoramica/index.mdx
+++ b/blog/2023-07-26-introducing-panoramica/index.mdx
@@ -172,7 +172,7 @@ and let's talk about how we can support it! 🙏
 **We are also interested in contributions in the following areas:**
 
 - Support for more LLMs and Vector DBs via [LangChain](https://js.langchain.com/docs/get_started/introduction/)
-- New UI [widgets](/docs/category/widget-library)
+- New UI widgets
 - More [themes](/docs/developer-guides/custom-themes)
 - TypeScript and codebase design
 - Graph data science and algorithms
