Update blog post's slug

--- a/blog/2023-08-11-live-demo-data/index.mdx
+++ b/blog/2023-08-11-live-demo-data/index.mdx
@@ -1,5 +1,5 @@
 ---
-slug: introducing-panoramica
+slug: demo-site-data-origin
 title: How we got data for the demo site
 authors: [steeve]
 tags: [panoramica]
