Make slug match the blog post's title

--- a/blog/2023-08-11-live-demo-data/index.mdx
+++ b/blog/2023-08-11-live-demo-data/index.mdx
@@ -1,5 +1,5 @@
 ---
-slug: demo-site-data-origin
+slug: how-we-got-data-for-the-demo-site
 title: How we got data for the demo site
 authors: [steeve]
 tags: [panoramica]
