Use jpg images instead of png

--- a/blog/2023-08-11-live-demo-data/index.mdx
+++ b/blog/2023-08-11-live-demo-data/index.mdx
@@ -15,7 +15,7 @@ Here’s a secret: Every single conversation on this project is fake!
 <div className="margin-vert--lg center">
   <ThemedImage
     alt="Panoramica demo conversation"
-    sources={{ light: "/img/demo-site-conversation.png", dark: "/img/demo-site-conversation-dark.png" }}
+    sources={{ light: "/img/demo-site-conversation.jpg", dark: "/img/demo-site-conversation-dark.jpg" }}
     style={{}}
   />
 </div>
