Fix broken images

--- a/blog/2023-08-14-live-demo-data/index.mdx
+++ b/blog/2023-08-14-live-demo-data/index.mdx
@@ -18,8 +18,8 @@ But here’s a secret: Every single conversation on this project is fake!
   <ThemedImage
     alt="Panoramica demo conversation"
     sources={{
-      light: "/img/demo-site-conversation.png",
-      dark: "/img/demo-site-conversation-dark.png",
+      light: "/img/demo-site-conversation.jpg",
+      dark: "/img/demo-site-conversation-dark.jpg",
     }}
     style={{}}
   />
