Adding a title for the section on Faker

--- a/blog/2023-08-14-live-demo-data/index.mdx
+++ b/blog/2023-08-14-live-demo-data/index.mdx
@@ -27,6 +27,8 @@ But here’s a secret: Every single conversation on this project is fake!
 
 We needed a way to get some data in for the world to see. We could have used public data from GitHub or Twitter, but that would have required finding the right subset to make a good demo, plus the work to gather and maintain the data. It didn't feel right or practical, that's why we opted to manufacture the data.
 
+## How Faker fell short for us
+
 Usually, for such an endeavor, one would use something like [Faker](https://fakerjs.dev/) to generate random entries. Faker is pretty great at generating realistic sounding sentences. But let see if we can obtain a conversation this way. With the hacker jargon, we get:
 
 ```
